Use line separator according to the file content, not System.lineSeparator()